--- a/GestaoContactos/public_html/Listar.html
+++ b/GestaoContactos/public_html/Listar.html
@@ -13,7 +13,7 @@ and open the template in the editor.
         <link href="styles/Listar.css" rel="stylesheet" type="text/css" id="link"/>
     </head>
     <body>
-        <h1>A minha Agenda</h1>
+        <h1>A minha Agenda (em Testes)</h1>
         <h2>Listar Contactos</h2>
         <div id="Contactos">
             <article></article>
