--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -50,7 +50,7 @@ and open the template in the editor.
                 </select>
         </p>
         </div>
-        <form>Birthday: <input id="DOB"    fd  type="date" name="bday" ></form>
+        <form>Birthday: <input id="DOB" type="date" name="bday" ></form>
         <p>Redes Sociais: </p>
         <div>
             <p>
