--- a/GestaoContactos/public_html/TodosContactos.html
+++ b/GestaoContactos/public_html/TodosContactos.html
@@ -25,10 +25,10 @@ and open the template in the editor.
         
         <label for="cor">Cor: </label>
             <select name="cor" id="cor">
-                <option value="cornsilk">Quase Branco</option>
-                <option value="bisque">Cor creme mas não</option>
-                <option value="burlywood">Bronzeado</option>
-                <option value="peachpuff">Cor de Rosinha</option>
+                <option id ="cornsilk" value="cornsilk">Quase Branco</option>
+                <option id ="bisque" value="bisque">Cor creme mas não</option>
+                <option id ="burlywood" value="burlywood">Bronzeado</option>
+                <option id ="peachpuff" value="peachpuff">Cor de Rosinha</option>
             </select>
         <div id="Erro"></div>
     </body>
