Adicionar aos grupos e aos favoritos funciona

--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -86,24 +86,19 @@ and open the template in the editor.
                 <label for="Instagram">Instagram: </label><input id="Instagram" type="text" name="Instagram" placeholder="instagram.com/exemplo">
             </p>
             <p>
-                <label for="Outro">Outro: </label><input id="Outro" type="text" name="Outro">
+                <label for="OutraRede">Outro: </label><input id="OutraRede" type="text" name="OutraRede">
             </p>
         </div>
         <p>
             <label for="Obs">Observações: </label><input id="Obs" type="text" name="Obs">
         </p>
         <form>
-            <input id="Amigos" type="checkbox" name="Amigos" value="Amigos" >Amigos<br>
+            <input id="Amigos" type="checkbox" name="Grupo" value="Amigos" >Amigos<br>
+            <input id="Trabalho" type="checkbox" name="Grupo" value="Trabalho" >Trabalho<br>
+            <input id="Familia" type="checkbox" name="Grupo" value="Familia" >Familia<br>
+            <input id="OutroGrupo" type="checkbox" name="Grupo" value="Outro" >Outro
         </form>
-        <form>
-            <input id="Trabalho" type="checkbox" name="Trabalho" value="Trabalho" >Trabalho<br>
-        </form>
-        <form>
-            <input id="Familia" type="checkbox" name="Familia" value="Familia" >Familia<br>
-        </form>
-        <form>
-            <input id="Outro" type="checkbox" name="Outro" value="Outro" >Outro 
-        </form>
+        
         <form>
             <input id="Fav" type="checkbox" name="Favorito" value="Fav" > Adicionar aos Favoritos 
         </form>
