--- a/GestaoContactos/public_html/ListarTodosContactos.html
+++ b/GestaoContactos/public_html/ListarTodosContactos.html
@@ -10,7 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="JS/Listar.js" type="text/javascript"></script>
-        <link href="styles/Listar.css" rel="stylesheet" type="text/css" id="link"/>
+        <link href="styles/ListarTodosContactos.css" rel="stylesheet" type="text/css" id="link"/>
     </head>
     <body>
         <h1>A minha Agenda (em Testes!!!)</h1>
