--- a/GestaoContactos/public_html/ListarTodosContactos.html
+++ b/GestaoContactos/public_html/ListarTodosContactos.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>Listar Contactos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="JS/Listar.js" type="text/javascript"></script>
+        <script src="JS/ListarTodosContactos.js" type="text/javascript"></script>
         <link href="styles/ListarTodosContactos.css" rel="stylesheet" type="text/css" id="link"/>
     </head>
     <body>
