--- a/GestaoContactos/public_html/index.html
+++ b/GestaoContactos/public_html/index.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>A minha Agenda</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="JS/TodosContactos.js" type="text/javascript"></script>
+        <script src="JS/index.js" type="text/javascript"></script>
         <link href="styles/index.css" rel="stylesheet" type="text/css" id="link"/>
     </head>
     <body>
@@ -17,7 +17,7 @@ and open the template in the editor.
         <nav id="menu">
             <ul>
                 <li><a href="Adicionar.html">Adicionar Contacto</a></li>
-                <li><a href="Listar.html">Listar Contactos</a></li>
+                <li><a href="ListarTodosContactos.html">Listar Contactos</a></li>
                 <li><a href="Favoritos.html">Favoritos</a></li>
                 <li><a href="Pesquisa.html">Pesquisa</a></li>
             </ul>
