Criar ListarFavoritos css +js

--- a/GestaoContactos/public_html/index.html
+++ b/GestaoContactos/public_html/index.html
@@ -18,7 +18,7 @@ and open the template in the editor.
             <ul>
                 <li><a href="Adicionar.html">Adicionar Contacto</a></li>
                 <li><a href="ListarTodosContactos.html">Listar Contactos</a></li>
-                <li><a href="Favoritos.html">Favoritos</a></li>
+                <li><a href="ListarFavoritos.html">Favoritos</a></li>
                 <li><a href="Pesquisa.html">Pesquisa</a></li>
             </ul>
         </nav>
