--- a/GestaoContactos/public_html/ListarTodosContactos.html
+++ b/GestaoContactos/public_html/ListarTodosContactos.html
@@ -15,9 +15,11 @@ and open the template in the editor.
     <body>
         <h1>A minha Agenda (em Testes!!!)</h1>
         <h2>Listar Contactos</h2>
+        <button id="Voltar">Voltar</button>
         <div id="Contactos">
             <article></article>
         </div>
+        <button id="Voltarb">Voltar</button>
         <label for="cor">Cor: </label>
             <select name="cor" id="cor">
                 <option id ="cornsilk" value="cornsilk">Quase Branco</option>
