Botão voltar e cores
adicionado botão voltar e correção de cor de fundo

--- a/GestaoContactos/public_html/ListarTodosContactos.html
+++ b/GestaoContactos/public_html/ListarTodosContactos.html
@@ -15,11 +15,10 @@ and open the template in the editor.
     <body>
         <h1>A minha Agenda (em Testes!!!)</h1>
         <h2>Listar Contactos</h2>
-        <button id="Voltar">Voltar</button>
+        <div id="VoltarB"></div>
         <div id="Contactos">
             <article></article>
         </div>
-        <button id="Voltarb">Voltar</button>
         <label for="cor">Cor: </label>
             <select name="cor" id="cor">
                 <option id ="cornsilk" value="cornsilk">Quase Branco</option>
@@ -27,6 +26,7 @@ and open the template in the editor.
                 <option id ="burlywood" value="burlywood">Bronzeado</option>
                 <option id ="peachpuff" value="peachpuff">Cor de Rosinha</option>
             </select>
+        <button id="Voltar">Voltar</button>
         <div id="Erro"></div>
     </body>
 </html>
