--- a/GestaoContactos/public_html/ListarContacto.html
+++ b/GestaoContactos/public_html/ListarContacto.html
@@ -9,7 +9,7 @@ and open the template in the editor.
         <title>Ver Contacto</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="styles/ListarContacto.css" rel="stylesheet" type="text/css"/>
+        <link href="styles/ListarContacto.css" rel="stylesheet" type="text/css" id="link"/>
         <script src="JS/ListarContacto.js" type="text/javascript"></script>
     </head>
     <body>
