Alteração dos nomes das cores

--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -110,9 +110,9 @@ and open the template in the editor.
         <label for="cor">Cor: </label>
             <select id="cor" name="cor" >
                 <option id ="cornsilk" value="cornsilk">Quase Branco</option>
-                <option id ="bisque" value="bisque">Cor creme mas não</option>
+                <option id ="bisque" value="bisque">Creme</option>
                 <option id ="burlywood" value="burlywood">Bronzeado</option>
-                <option id ="peachpuff" value="peachpuff">Cor de Rosinha</option>
+                <option id ="peachpuff" value="peachpuff">Rosinha</option>
             </select>
         <div id="Erro"></div>
     </body>
