--- a/GestaoContactos/public_html/ListarTodosContactos.html
+++ b/GestaoContactos/public_html/ListarTodosContactos.html
@@ -22,9 +22,9 @@ and open the template in the editor.
         <label for="cor">Cor: </label>
             <select name="cor" id="cor">
                 <option id ="cornsilk" value="cornsilk">Quase Branco</option>
-                <option id ="bisque" value="bisque">Cor creme mas não</option>
+                <option id ="bisque" value="bisque">Creme</option>
                 <option id ="burlywood" value="burlywood">Bronzeado</option>
-                <option id ="peachpuff" value="peachpuff">Cor de Rosinha</option>
+                <option id ="peachpuff" value="peachpuff">Rosinha</option>
             </select>
         <button id="Voltar">Voltar</button>
         <div id="Erro"></div>
