Mudei os Titulos

--- a/GestaoContactos/public_html/ListarTodosContactos.html
+++ b/GestaoContactos/public_html/ListarTodosContactos.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Listar Contactos</title>
+        <title>Listar Todos os Contactos</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="JS/ListarTodosContactos.js" type="text/javascript"></script>
@@ -14,7 +14,7 @@ and open the template in the editor.
     </head>
     <body>
         <h1>A minha Agenda</h1>
-        <h2>Listar Contactos</h2>
+        <h2>Listar Todos os Contactos</h2>
         <div id="VoltarB"></div>
         <div id="Contactos">
             <article></article>
