--- a/GestaoContactos/public_html/Editar.html
+++ b/GestaoContactos/public_html/Editar.html
@@ -27,16 +27,16 @@ and open the template in the editor.
             <p>
         <label for="Pais">Pais: </label>
             <select id="Pais" name="Pais" >
-                <option value="+351">Portugal (+351)</option>
-                <option value="+34">Espanha (+34)</option>
-                <option value="+55">Brasil (+55)</option>
-                <option value="+33">França (+33)</option>
-                <option value="+41">Suiça (+41)</option>
-                <option value="+49">Alemanha (+49)</option>
-                <option value="+44">Inglaterra (+44)</option>
-                <option value="+1">Estados Unidos (+1)</option>
-                <option value="+31">Holanda (+31)</option>
-                <option value="+244">Angola (+244)</option>
+                <option id="Portugal" value="+351">Portugal (+351)</option>
+                <option id="Espanha" value="+34">Espanha (+34)</option>
+                <option id="Brazil" value="+55">Brasil (+55)</option>
+                <option id="frança" value="+33">França (+33)</option>
+                <option id="Suica" value="+41">Suiça (+41)</option>
+                <option id="Alemanha" value="+49">Alemanha (+49)</option>
+                <option id="Inglaterra" value="+44">Inglaterra (+44)</option>
+                <option id="EstadosUnidos" value="+1">Estados Unidos (+1)</option>
+                <option id="Holanda" value="+31">Holanda (+31)</option>
+                <option id="Angola" value="+244">Angola (+244)</option>
             </select>
         </p>
         <p>
