--- a/GestaoContactos/public_html/index.html
+++ b/GestaoContactos/public_html/index.html
@@ -10,7 +10,7 @@ and open the template in the editor.
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="JS/index.js" type="text/javascript"></script>
-        <link href="styles/index.css" rel="stylesheet" type="text/css" id="link"/>
+        <link href="styles/index.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <h1>A minha Agenda</h1>
