--- a/GestaoContactos/public_html/Editar.html
+++ b/GestaoContactos/public_html/Editar.html
@@ -81,7 +81,10 @@ and open the template in the editor.
         </form>
 
         <form>
-            <input id="Fav" type="checkbox" name="Favorito" value="Fav" > Adicionar aos Favoritos 
+            <label>
+                <img src="Images/estrelaOff.png" id="estrela" alt="NO"/>
+                <input id="Fav" type="checkbox" name="Favorito" value="Fav" >Adicionar aos Favoritos
+            </label>
         </form>
               
         <button id="Voltar">Voltar</button>
