--- a/GestaoContactos/public_html/Pesquisa.html
+++ b/GestaoContactos/public_html/Pesquisa.html
@@ -18,11 +18,17 @@ and open the template in the editor.
         <div id="VoltarB"></div>
         <div id="Pesquisar">
             <article>
+                <!--
                 <p>
                     <label for="Nome">Nome: </label><input id="Nome" type="text" name="Nome" required="required">
                 </p>
+                
                 <p>
                     <label for="Numero">Número: </label><input id="Numero" type="tel" name="Numero" placeholder="9XX XXX XXX">
+                </p>
+                -->
+                <p>
+                    <label for="pesquisa">Pesquisa: </label><input id="pesquisa" type="text" name="pesquisa" required="required">
                 </p>
             </article>
         </div>
