Alteraçoes de estilo
Ficheiros em que as cores e letras foram alterados:
adicionar.html
Listarcontacto.js
ListarTodosContactos.js
Pesquisa.js
Adicionar.css
Editar.css
index.css
ListarContacto.css
ListarTodosContactos.css
Pesquisa.css

--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -58,7 +58,7 @@ and open the template in the editor.
             </select>
         </p>
         <p>
-            <label for="Numero">Número: </label><input id="Numero" type="tel" name="Numero" placeholder="9XX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
+            <label for="Numero">Número: </label><input id="Numero" type="number" name="Numero" placeholder="9XX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
         </p>
         <p>
             <label for="Tipo">Tipo: </label>
