Alteraçao do estilo das paginas
O estilo de todas as paginas foi alterado
o botão das cores fica no rodapé
rodapé adicionado no index

--- a/GestaoContactos/public_html/ListarContacto.html
+++ b/GestaoContactos/public_html/ListarContacto.html
@@ -21,13 +21,16 @@ and open the template in the editor.
         
         <button id="Voltar">Voltar</button>
         
-        <label for="cor">Cor: </label>
+
+        <div id="Erro"></div>
+        <footer>
+                    <label for="cor">Cor: </label>
             <select id="cor" name="cor" >
                 <option id ="cornsilk" value="cornsilk">Quase Branco</option>
                 <option id ="bisque" value="bisque">Creme</option>
                 <option id ="burlywood" value="burlywood">Bronzeado</option>
                 <option id ="peachpuff" value="peachpuff">Rosinha</option>
             </select>
-        <div id="Erro"></div>
+        </footer>
     </body>
 </html>
