--- a/GestaoContactos/public_html/index.html
+++ b/GestaoContactos/public_html/index.html
@@ -22,14 +22,15 @@ and open the template in the editor.
                 <li><a href="Pesquisa.html">Pesquisa</a></li>
             </ul>
         </nav>
-        
-        <label for="cor">Cor: </label>
+        <div id="Erro"></div>
+        <footer>Trabalho realizado por: <p>César Meireles - 8150399</p><p> Luís Teixeira - 8140072</p><p> Tânia Assis - 8150455</p>
+            <label for="cor">Cor: </label>
             <select name="cor" id="cor">
                 <option id ="cornsilk" value="cornsilk">Quase Branco</option>
                 <option id ="bisque" value="bisque">Creme</option>
                 <option id ="burlywood" value="burlywood">Bronzeado</option>
                 <option id ="peachpuff" value="peachpuff">Rosinha</option>
             </select>
-        <div id="Erro"></div>
+        </footer>
     </body>
 </html>
