--- a/GestaoContactos/public_html/index.html
+++ b/GestaoContactos/public_html/index.html
@@ -23,6 +23,7 @@ and open the template in the editor.
             </ul>
         </nav>
         <div id="Erro"></div>
+        <img src="Images/logotipoescola.png" alt=""/>
         <footer>Trabalho realizado por: <p>César Meireles - 8150399</p><p> Luís Teixeira - 8140072</p><p> Tânia Assis - 8150455</p>
             <label for="cor">Cor: </label>
             <select name="cor" id="cor">
