Pesquisa ainda nao funciona

--- a/GestaoContactos/public_html/Pesquisa.html
+++ b/GestaoContactos/public_html/Pesquisa.html
@@ -32,7 +32,7 @@ and open the template in the editor.
                     </p>
                 </article>
             </div>
-            <div id="Apresentar"></div>
+            <div id="Apresentar"><article id="contacto"></article></div>
             <button id="Enviar">Enviar</button>
 
             <div id="Erro"></div>
