Buttons listar contactos
Alterado os botoes do listar contactos para imagens

--- a/GestaoContactos/public_html/Editar.html
+++ b/GestaoContactos/public_html/Editar.html
@@ -96,7 +96,7 @@ and open the template in the editor.
                     <input id="Fav" type="checkbox" name="Favorito" value="Fav" >Adicionar aos Favoritos
                 </label>
             </form>
-            <button id="Editar">Editar</button>
+            <input id="Editar" type="image" src="Images/edit.png" width="68" height="48"></input>
 
             <div id="Contacto">
                 <article></article>
