--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -38,7 +38,7 @@ and open the template in the editor.
             <div>
                 <p>
             <label for="Pais">Pais: </label>
-                <select id="Pais" name="Pais" >
+                <select id="Pais" name="Pais" type="text">
                     <option value="+351">Portugal (+351)</option>
                     <option value="+34">Espanha (+34)</option>
                     <option value="+55">Brasil (+55)</option>
@@ -52,7 +52,7 @@ and open the template in the editor.
                 </select>
             </p>
             <p>
-                <label for="Numero">Número: </label><input id="Numero" type="number" name="Numero" placeholder="9XX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
+                <label for="Numero">Número: </label><input id="Numero" type="tel" name="Numero" placeholder="9XX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
             </p>
             <p>
                 <label for="Tipo">Tipo: </label>
