Aletarção do pais

--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -38,17 +38,17 @@ and open the template in the editor.
             <div>
                 <p>
             <label for="Pais">Pais: </label>
-                <select id="Pais" name="Pais" type="text">
-                    <option value="+351">Portugal (+351)</option>
-                    <option value="+34">Espanha (+34)</option>
-                    <option value="+55">Brasil (+55)</option>
-                    <option value="+33">França (+33)</option>
-                    <option value="+41">Suiça (+41)</option>
-                    <option value="+49">Alemanha (+49)</option>
-                    <option value="+44">Inglaterra (+44)</option>
-                    <option value="+1">Estados Unidos (+1)</option>
-                    <option value="+31">Holanda (+31)</option>
-                    <option value="+244">Angola (+244)</option>
+                <select id="Pais" name="Pais">
+                    <option value="Portugal">Portugal (+351)</option>
+                    <option value="Espanha">Espanha (+34)</option>
+                    <option value="Brasil">Brasil (+55)</option>
+                    <option value="França">França (+33)</option>
+                    <option value="Suiça">Suiça (+41)</option>
+                    <option value="Alemanha">Alemanha (+49)</option>
+                    <option value="Inglaterra">Inglaterra (+44)</option>
+                    <option value="Estados Unidos">Estados Unidos (+1)</option>
+                    <option value="Holanda">Holanda (+31)</option>
+                    <option value="Angola">Angola (+244)</option>
                 </select>
             </p>
             <p>
