--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -52,7 +52,19 @@ and open the template in the editor.
                 </select>
             </p>
             <p>
-                <label for="Numero">Número: </label><input id="Numero" type="tel" name="Numero" placeholder="9XX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
+                <label for="Numero">Número 1: </label><input id="Numero1" type="tel" name="Numero1" placeholder="XXX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
+            </p>
+            <p>
+                <label for="Numero">Número 2: </label><input id="Numero2" type="tel" name="Numero2" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Numero">Número 3: </label><input id="Numero3" type="tel" name="Numero3" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Numero">Número 4: </label><input id="Numero4" type="tel" name="Numero4" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Numero">Número 5: </label><input id="Numero5" type="tel" name="Numero5" placeholder="XXX XXX XXX">
             </p>
             <p>
                 <label for="Tipo">Tipo: </label>
