--- a/GestaoContactos/public_html/Adicionar.html
+++ b/GestaoContactos/public_html/Adicionar.html
@@ -36,9 +36,9 @@ and open the template in the editor.
 
             <p>Telefone: </p>
             <div>
-                <p>
+            <p>
             <label for="Pais">Pais: </label>
-                <select id="Pais" name="Pais">
+                <select id="Pais1" name="Pais1">
                     <option value="Portugal">Portugal (+351)</option>
                     <option value="Espanha">Espanha (+34)</option>
                     <option value="Brasil">Brasil (+55)</option>
@@ -55,20 +55,112 @@ and open the template in the editor.
                 <label for="Numero">Número 1: </label><input id="Numero1" type="tel" name="Numero1" placeholder="XXX XXX XXX"><span id = "inputNumeroInvalido" class="inputMessageErrorHidden"> Número Vazio!</span>
             </p>
             <p>
+                <label for="Tipo">Tipo: </label>
+                    <select id="Tipo1" name="Tipo1" >
+                       <option value="P">Personal</option>
+                       <option value="W">Work</option>
+                       <option value="O">Other</option>
+                    </select>
+            </p>
+            <p>
+            <label for="Pais">Pais: </label>
+                <select id="Pais2" name="Pais2">
+                    <option value="Portugal">Portugal (+351)</option>
+                    <option value="Espanha">Espanha (+34)</option>
+                    <option value="Brasil">Brasil (+55)</option>
+                    <option value="França">França (+33)</option>
+                    <option value="Suiça">Suiça (+41)</option>
+                    <option value="Alemanha">Alemanha (+49)</option>
+                    <option value="Inglaterra">Inglaterra (+44)</option>
+                    <option value="Estados Unidos">Estados Unidos (+1)</option>
+                    <option value="Holanda">Holanda (+31)</option>
+                    <option value="Angola">Angola (+244)</option>
+                </select>
+            </p>
+            <p>
                 <label for="Numero">Número 2: </label><input id="Numero2" type="tel" name="Numero2" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Tipo">Tipo: </label>
+                    <select id="Tipo2" name="Tipo2" >
+                       <option value="P">Personal</option>
+                       <option value="W">Work</option>
+                       <option value="O">Other</option>
+                    </select>
+            </p>
+            <p>
+            <label for="Pais">Pais: </label>
+                <select id="Pais3" name="Pais3">
+                    <option value="Portugal">Portugal (+351)</option>
+                    <option value="Espanha">Espanha (+34)</option>
+                    <option value="Brasil">Brasil (+55)</option>
+                    <option value="França">França (+33)</option>
+                    <option value="Suiça">Suiça (+41)</option>
+                    <option value="Alemanha">Alemanha (+49)</option>
+                    <option value="Inglaterra">Inglaterra (+44)</option>
+                    <option value="Estados Unidos">Estados Unidos (+1)</option>
+                    <option value="Holanda">Holanda (+31)</option>
+                    <option value="Angola">Angola (+244)</option>
+                </select>
             </p>
             <p>
                 <label for="Numero">Número 3: </label><input id="Numero3" type="tel" name="Numero3" placeholder="XXX XXX XXX">
             </p>
             <p>
+                <label for="Tipo">Tipo: </label>
+                    <select id="Tipo3" name="Tipo3" >
+                       <option value="P">Personal</option>
+                       <option value="W">Work</option>
+                       <option value="O">Other</option>
+                    </select>
+            </p>
+            <p>
+            <label for="Pais">Pais: </label>
+                <select id="Pais4" name="Pais4">
+                    <option value="Portugal">Portugal (+351)</option>
+                    <option value="Espanha">Espanha (+34)</option>
+                    <option value="Brasil">Brasil (+55)</option>
+                    <option value="França">França (+33)</option>
+                    <option value="Suiça">Suiça (+41)</option>
+                    <option value="Alemanha">Alemanha (+49)</option>
+                    <option value="Inglaterra">Inglaterra (+44)</option>
+                    <option value="Estados Unidos">Estados Unidos (+1)</option>
+                    <option value="Holanda">Holanda (+31)</option>
+                    <option value="Angola">Angola (+244)</option>
+                </select>
+            </p>
+            <p>
                 <label for="Numero">Número 4: </label><input id="Numero4" type="tel" name="Numero4" placeholder="XXX XXX XXX">
+            </p>
+            <p>
+                <label for="Tipo">Tipo: </label>
+                    <select id="Tipo4" name="Tipo4" >
+                       <option value="P">Personal</option>
+                       <option value="W">Work</option>
+                       <option value="O">Other</option>
+                    </select>
+            </p>
+            <p>
+            <label for="Pais">Pais: </label>
+                <select id="Pais5" name="Pais5">
+                    <option value="Portugal">Portugal (+351)</option>
+                    <option value="Espanha">Espanha (+34)</option>
+                    <option value="Brasil">Brasil (+55)</option>
+                    <option value="França">França (+33)</option>
+                    <option value="Suiça">Suiça (+41)</option>
+                    <option value="Alemanha">Alemanha (+49)</option>
+                    <option value="Inglaterra">Inglaterra (+44)</option>
+                    <option value="Estados Unidos">Estados Unidos (+1)</option>
+                    <option value="Holanda">Holanda (+31)</option>
+                    <option value="Angola">Angola (+244)</option>
+                </select>
             </p>
             <p>
                 <label for="Numero">Número 5: </label><input id="Numero5" type="tel" name="Numero5" placeholder="XXX XXX XXX">
             </p>
             <p>
                 <label for="Tipo">Tipo: </label>
-                    <select id="Tipo" name="Tipo" >
+                    <select id="Tipo5" name="Tipo5" >
                        <option value="P">Personal</option>
                        <option value="W">Work</option>
                        <option value="O">Other</option>
